<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connext_nodes_cpp</name>
  <version>0.1.0</version>
  <description>ROS 2 Nodes using RTI Connext DDS' Modern C++ API</description>
  <maintainer email="asorbini@rti.com">Andrea Sorbini</maintainer>
  <maintainer email="neil@rti.com">Neil Puthuff</maintainer>
  <license>RTI Free-To-Use</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <!-- All required Connext dependencies can be satisfied by this module -->
  <depend>connext_node_helpers</depend>

  <depend>connext_node_msgs</depend>
  <!-- <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rosidl_runtime_cpp</depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
